# ros2-project

./: README.md
my_ws/: commands.txt  temp.txt
my_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_ws/install/battery_interfaces/share/battery_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
my_ws/install/battery_interfaces/share/battery_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  (+10 more)
my_ws/install/cpp_practice/lib/cpp_practice/: add_cpp  number_generator
my_ws/install/cpp_practice/share/cpp_practice/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
my_ws/install/cpp_service_test/lib/cpp_service_test/: add_int_client  add_int_server
my_ws/install/cpp_service_test/share/cpp_service_test/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
my_ws/install/cpp_test_pkg/lib/cpp_test_pkg/: number_counter  number_publisher
my_ws/install/cpp_test_pkg/share/cpp_test_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
my_ws/install/led_system/lib/led_system/: battery_server  led_client
my_ws/install/led_system/share/led_system/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
my_ws/install/my_cpp_pkg/lib/my_cpp_pkg/: cpp_node1  hw_status_publisher  robot_news_station  smartphone
my_ws/install/my_cpp_pkg/share/my_cpp_pkg/: package.sh
my_ws/install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
my_ws/install/my_robot_bringup/share/my_robot_bringup/: local_setup.sh  package.sh  package.xml
my_ws/install/my_robot_interfaces/share/my_robot_interfaces/: package.sh
my_ws/install/py_final_project/lib/py_final_project/: turtle_controller_node  turtle_generator_node
my_ws/install/py_final_project/share/py_final_project/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
my_ws/install/py_server_test/lib/py_server_test/: add_tow_int  add_tow_int_client  add_two_int  add_two_int_client
my_ws/install/py_server_test/share/py_server_test/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
my_ws/log/: latest_build  latest_extension-points
my_ws/src/battery_interfaces/: CMakeLists.txt  package.xml
my_ws/src/cpp_practice/: CMakeLists.txt
my_ws/src/cpp_practice/src/: add_cpp.cpp  number_generator.cpp
my_ws/src/cpp_service_test/: CMakeLists.txt
my_ws/src/cpp_service_test/src/: add_int_client.cpp  add_int_server.cpp
my_ws/src/cpp_test_pkg/: CMakeLists.txt  package.xml
my_ws/src/cpp_test_pkg/src/: number_counter.cpp  number_pub.cpp
my_ws/src/led_system/: CMakeLists.txt
my_ws/src/led_system/src/: battery_server.cpp  led_client.cpp
my_ws/src/my_cpp_pkg/: CMakeLists.txt
my_ws/src/my_cpp_pkg/src/: hw_status_publisher.cpp  my_first_node.cpp  robot_news_station.cpp  smartphone.cpp
my_ws/src/my_py_pkg/: setup.py
my_ws/src/my_py_pkg/my_py_pkg/: hw_status_publisher.py
my_ws/src/my_robot_bringup/launch/: nunber_app.launch.py  turtle_project.launch.py
my_ws/src/my_robot_interfaces/: CMakeLists.txt
my_ws/src/py_final_project/: setup.cfg  setup.py
my_ws/src/py_final_project/py_final_project/: turtle_controller.py  turtle_generator.py
my_ws/src/py_server_test/: package.xml  setup.cfg  setup.py
(+37 files in other folders)
